--- a/distributor.html
+++ b/distributor.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
@@ -14,6 +15,41 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="loader-wrap">
+        <div class="preloader">
+            <div id="handle-preloader" class="handle-preloader">
+                <div class="animation-preloader">
+                    <div class="spinner"></div>
+                    <div class="txt-loading">
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
+                        </span>
+                        <span data-text-preloader="I" class="letters-loading">
+                            I
+                        </span>
+                        <span data-text-preloader="R" class="letters-loading">
+                            R
+                        </span>
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
+                        </span>
+                        <span data-text-preloader="L" class="letters-loading">
+                            L
+                        </span>
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
+                        </span>
+                        <span data-text-preloader="M" class="letters-loading">
+                            M
+                        </span>
+                        
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>
+    <!-- preloader end -->
     <header>
         <nav class="container">
             <div class="logo">
@@ -104,22 +140,28 @@
                 <tfoot>
                     <tr>
                         <td colspan="7">
-                            <div class="links"><a href="#">&laquo;</a> <a class="active" href="#">1</a> <a
-                                    href="#">2</a> <a href="#">3</a> <a href="#">4</a> <a href="#"> &raquo; </a></div>
+                            <div class="links"><a href="#">&laquo;</a><a class="active" href="#">1</a><a href="#"> &raquo; </a></div>
                         </td>
                     </tr>
                 </tfoot>
-                <tbody>
-                    <tr>
-                        <td>cell1_1</td>
-                        <td>cell2_1</td>
-                        <td>cell3_1</td>
-                        <td>cell4_1</td>
-                        <td>cell5_1</td>
-                        <td>cell6_1</td>
-                        <td><button>Hubungi</button></td>
-                    </tr>                   
-                </tbody>                
+                <tr class="odd">
+                    <td>Depok</td>
+                    <td>Gedung Bumi Mandiri Tower II Lt.9 No.907 Jl. Panglima Sudirman 66 - 68 Surabaya 60271 Indonesia</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td><a href="https://wa.me/+628697775111" class="link-wa-desktop"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i>Hubungi</a></td>
+                </tr>
+                <tr class="odd">
+                    <td>Depok</td>
+                    <td>Gedung Bumi Mandiri Tower II Lt.9 No.907 Jl. Panglima Sudirman 66 - 68 Surabaya 60271 Indonesia</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Lorem Ipsum</td>
+                    <td><a href="https://wa.me/+628697775111" class="link-wa-desktop"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i>Hubungi</a></td>
+                </tr>               
             </table>
 
             <table class="mnatureTable mobile">     
@@ -200,8 +242,7 @@
                 <tfoot>
                     <tr>
                         <td colspan="2">
-                            <div class="links"><a href="#">&laquo;</a> <a class="active" href="#">1</a> <a
-                                    href="#">2</a> <a href="#">3</a> <a href="#">4</a> <a href="#"> &raquo; </a></div>
+                            <div class="links"><a href="#">&laquo;</a> <a class="active" href="#">1</a><a href="#"> &raquo; </a></div>
                         </td>
                     </tr>
                 </tfoot>   
